--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       run: uv python install ${{ matrix.python-version }}
     
     - name: Install dependencies
-      run: uv sync --all-extras
+      run: uv sync --all-extras --dev
     
     - name: Run tests
       run: uv run pytest -v --tb=short
@@ -48,7 +48,7 @@ jobs:
       run: uv python install 3.11
     
     - name: Install dependencies
-      run: uv sync
+      run: uv sync --dev
     
     - name: Run ruff
       run: uv run ruff check .
@@ -72,7 +72,7 @@ jobs:
       run: uv python install 3.11
     
     - name: Install dependencies
-      run: uv sync
+      run: uv sync --dev
     
     - name: Install pytest-cov
       run: uv pip install pytest-cov
