--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,10 @@ jobs:
       run: uv python install 3.11
     
     - name: Install dependencies
-      run: uv sync --dev
+      run: uv sync
+    
+    - name: Install dev tools
+      run: uv pip install ruff black
     
     - name: Run ruff
       run: uv run ruff check .
