--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,3 +67,8 @@ target-version = "py311"
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP"]
 ignore = []
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+]
