--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
       - id: nbstripout
 
-  # Formatting (Ruff only)
+  # Formatting
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.8.4
     hooks:
@@ -16,9 +16,9 @@ repos:
   # Run tests before pushing
   - repo: local
     hooks:
-      - id: pytest
+      - id: invoke-test
         name: pytest
-        entry: uv run pytest
+        entry: uv run invoke test
         language: system
         pass_filenames: false
         always_run: true
